tests/scan/fixtures/validation/negative/clean_rubygems_clean_config_gem/clean_config_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_config_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_config_gem"
  s.authors = ["Example Author"]
end
